# rust-lib-template

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
docs/: codegraph-usage.md  high-risk-task-guideline.html  high-risk-task-guideline.md  index.html  index.md  prompt-template-library.html  prompt-template-library.md  ruflo-usage.md  search.html  search.md  sparc-usage-guideline.html  sparc-usage-guideline.md  tdd-guideline.html  tdd-guideline.md
scripts/: init-ruflo-team.sh
